syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "OfferServiceProto";

package proto;

service OfferService {
  rpc SaveOffer(SaveOfferRequest) returns (SaveOfferResponse);
  rpc GetOfferById(OfferIdRequest) returns (OfferResponse);
  rpc GetAllOffers(EmptyMessage) returns (OfferList);
}

message SaveOfferRequest {
  string title = 1;
  string description = 2;
  int32 price = 3;
  int32 numberOfFoodBags = 4;
  Date pickupDate = 5;
  Time pickupTimeStart = 6;
  Time pickupTimeEnd = 7;
  bytes image=8;
  repeated string categories = 9;
}

message OfferIdRequest {
  string id = 1;
}

message OfferResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 price = 4;
  int32 numberOfFoodBags = 5;
  Date pickupDate = 6;
  Time pickupTimeStart = 7;
  Time pickupTimeEnd = 8;
  repeated string categories = 9;
  bytes image = 10;
  string status = 11;
  string buyer = 12;
}


message SaveOfferResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 price = 4;
  int32 numberOfFoodBags = 5;
  Date pickupDate = 6;
  Time pickupTimeStart = 7;
  Time pickupTimeEnd = 8;
  repeated string categories = 9;
  bytes imagePath = 10;
}

message OfferList{
  repeated OfferResponse offer = 1;
}

message Time{
  int32 hour=1;
  int32 minute=2;
}

message Date{
  int32 year=1;
  int32 month=2;
  int32 day=3;
}

message EmptyMessage{

}




